policies/custom/custom-policies/peer-authentication-istio.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-mesh-strict-mtls
  namespace: istio-system 
spec:
  mtls:
    mode: STRICT
