policies/custom/custom-policies/authorization-policy-istio.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny-all
  namespace: istio-system
spec: {}
